--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -24,7 +24,7 @@
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
         android:supportsRtl="true"
-        android:theme="@style/Theme.AppCompat.NoActionBar"
+        android:theme="@style/AllTheme"
         android:name="android.support.multidex.MultiDexApplication">
         <activity
             android:name=".MainActivity"
@@ -38,31 +38,46 @@
         <activity
             android:name=".AboutActivity"
             android:screenOrientation="landscape"
-            android:theme="@style/Theme.AppCompat.NoActionBar">
+            android:theme="@style/AllTheme">
         </activity>
 
         <!-- Maps activity -->
         <activity
             android:name=".OSMMapsActivity"
             android:screenOrientation="landscape"
-            android:theme="@style/Theme.AppCompat.NoActionBar">
+            android:theme="@style/AllTheme">
         </activity>
 
         <!-- Activity for working with DB -->
         <activity
-            android:name=".DBfirstActivity"
+            android:name=".database.DBfirstActivity"
             android:screenOrientation="landscape"
-            android:theme="@style/Theme.AppCompat.NoActionBar">
+            android:theme="@style/AllTheme">
         </activity>
         <activity
-            android:name=".DBmainActivity"
+            android:name=".database.DBmainActivity"
             android:screenOrientation="landscape"
-            android:theme="@style/Theme.AppCompat.NoActionBar">
+            android:theme="@style/AllTheme">
         </activity>
         <activity
-            android:name=".DBviewActivity"
+            android:name=".database.DBviewActivity"
             android:screenOrientation="landscape"
-            android:theme="@style/Theme.AppCompat.NoActionBar">
+            android:theme="@style/AllTheme">
+        </activity>
+
+
+        <!-- Activity for admin -->
+        <activity
+            android:name=".admin.AdminMainActivity"
+            android:screenOrientation="landscape"
+            android:theme="@style/AllTheme">
+        </activity>
+
+        <!-- Settings activity -->
+        <activity
+            android:name=".SettingsActivity"
+            android:screenOrientation="landscape"
+            android:theme="@style/AllTheme">
         </activity>
 
     </application>
