add drawable resources and design current activities NEXT STEP

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -72,6 +72,16 @@
             android:screenOrientation="landscape"
             android:theme="@style/AllTheme">
         </activity>
+        <activity
+            android:name=".admin.AdminListActivity"
+            android:screenOrientation="landscape"
+            android:theme="@style/AllTheme">
+        </activity>
+        <activity
+            android:name=".admin.AdminSettingsActivity"
+            android:screenOrientation="landscape"
+            android:theme="@style/AllTheme">
+        </activity>
 
         <!-- Settings activity -->
         <activity
