weather activity add,

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -17,6 +17,7 @@
     <uses-permission android:name="android.permission.ACCESS_LOCATION_EXTRA_COMMANDS" />
     <uses-permission android:name="android.permission.ACCESS_WIFI_STATE" />
     <uses-permission android:name="android.permission.INTERNET" />
+    <uses-permission android:name="android.permission.MANAGE_DOCUMENTS" />
     <uses-feature android:name="android.hardware.location.gps" />
 
     <application
@@ -38,63 +39,59 @@
         <activity
             android:name=".AboutActivity"
             android:screenOrientation="landscape"
-            android:theme="@style/AllTheme"></activity>
+            android:theme="@style/AllTheme"/>
 
         <!-- Maps activity -->
         <activity
             android:name=".OSMMapsActivity"
             android:screenOrientation="landscape"
-            android:theme="@style/AllTheme"></activity>
+            android:theme="@style/AllTheme"/>
 
         <!-- Activity for working with DB -->
         <activity
             android:name=".database.DBfirstActivity"
             android:screenOrientation="landscape"
-            android:theme="@style/AllTheme"></activity>
+            android:theme="@style/AllTheme"/>
         <activity
             android:name=".database.DBmainActivity"
             android:screenOrientation="landscape"
-            android:theme="@style/AllTheme"></activity>
+            android:theme="@style/AllTheme"/>
         <activity
             android:name=".database.DBviewActivity"
             android:screenOrientation="landscape"
-            android:theme="@style/AllTheme"></activity>
+            android:theme="@style/AllTheme"/>
 
         <!-- Activity for admin -->
         <activity
             android:name=".admin.AdminMainActivity"
             android:screenOrientation="landscape"
-            android:theme="@style/AllTheme"></activity>
+            android:theme="@style/AllTheme"/>
         <activity
             android:name=".admin.AdminListActivity"
             android:screenOrientation="landscape"
-            android:theme="@style/AllTheme"></activity>
+            android:theme="@style/AllTheme"/>
         <activity
             android:name=".admin.AdminSettingsActivity"
             android:screenOrientation="landscape"
-            android:theme="@style/AllTheme"></activity>
+            android:theme="@style/AllTheme"/>
 
         <!-- Settings activity -->
         <activity
             android:name=".SettingsActivity"
             android:screenOrientation="landscape"
-            android:theme="@style/AllTheme"></activity>
+            android:theme="@style/AllTheme"/>
         <activity
             android:name=".ActivityCheckNavigation"
             android:screenOrientation="landscape"
-            android:theme="@style/AllTheme"></activity>
-        <!--
- ATTENTION: This was auto-generated to add Google Play services to your project for
-     App Indexing.  See https://g.co/AppIndexing/AndroidStudio for more information.
-        -->
-        <meta-data
-            android:name="com.google.android.gms.version"
-            android:value="@integer/google_play_services_version" />
+            android:theme="@style/AllTheme"/>
 
-        <service
-            android:name=".MyLocationService"
-            android:enabled="true"
-            android:exported="true"></service>
+        <!-- weather activity -->
+        <activity
+            android:name=".WeatherActivity"
+            android:screenOrientation="landscape"
+            android:theme="@style/AllTheme" />
+
+
     </application>
 
 </manifest>
