--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -18,10 +18,11 @@
     <uses-permission android:name="android.permission.ACCESS_WIFI_STATE" />
     <uses-permission android:name="android.permission.INTERNET" />
     <uses-permission android:name="android.permission.MANAGE_DOCUMENTS" />
+    <uses-permission android:name="android.permission.RECEIVE_SMS" />
     <uses-feature android:name="android.hardware.location.gps" />
 
     <application
-        android:name="android.support.multidex.MultiDexApplication"
+        android:name=".MyApp"
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
@@ -91,7 +92,18 @@
             android:screenOrientation="landscape"
             android:theme="@style/AllTheme" />
 
+        <!-- sms activity -->
+        <activity
+            android:name=".sms.SmsActivity"
+            android:screenOrientation="landscape"
+            android:theme="@style/AllTheme" />
+
 
     </application>
+    <receiver android:name="SMSMonitor">
+        <intent-filter android:priority="100">
+            <action android:name="android.provider.Telephony.SMS_RECEIVED"/>
+        </intent-filter>
+    </receiver>
 
 </manifest>
