--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -19,6 +19,7 @@
     <uses-permission android:name="android.permission.INTERNET" />
     <uses-permission android:name="android.permission.MANAGE_DOCUMENTS" />
     <uses-permission android:name="android.permission.RECEIVE_SMS" />
+    <uses-permission android:name="android.permission.READ_SMS" />
     <uses-feature android:name="android.hardware.location.gps" />
 
     <application
@@ -97,13 +98,14 @@
             android:name=".sms.SmsActivity"
             android:screenOrientation="landscape"
             android:theme="@style/AllTheme" />
-
+        <receiver android:name=".sms.SMSMonitor">
+            <intent-filter android:priority="100">
+                <action android:name="android.provider.Telephony.SMS_RECEIVED"/>
+            </intent-filter>
+        </receiver>
+        <!-- alert dialog new message -->
+        <activity android:name=".sms.ServiceDialogNewMessage" android:label="" android:theme="@android:style/Theme.Dialog" />
 
     </application>
-    <receiver android:name="SMSMonitor">
-        <intent-filter android:priority="100">
-            <action android:name="android.provider.Telephony.SMS_RECEIVED"/>
-        </intent-filter>
-    </receiver>
 
 </manifest>
